--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ cryptography==38.0.4
 defusedxml==0.7.1
 Django==4.1.4
 django-allauth==0.51.0
+django-ckeditor==6.5.1
+django-js-asset==2.0.0
 idna==3.4
 oauthlib==3.2.2
 Pillow==9.3.0
