--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ defusedxml==0.7.1
 Django==4.1.4
 django-allauth==0.51.0
 django-ckeditor==6.5.1
+django-crispy-forms==1.14.0
+django-environ==0.9.0
 django-js-asset==2.0.0
 idna==3.4
 oauthlib==3.2.2
